packages/verifier/test/examples/failing/top-level-call.js
// expect: no-top-level-side-effects, no-restricted-globals
console.log("init");

export default function (element) {
  return () => {};
}
